--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "apollo-server-express": "^2.15.1",
     "express": "^4.17.1",
     "graphql": "^15.3.0",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "uuid": "^8.2.0"
   }
 }
