--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "apollo-server": "^2.15.1",
     "apollo-server-express": "^2.15.1",
+    "dataloader": "^2.0.0",
     "express": "^4.17.1",
     "graphql": "^15.3.0",
     "jsonwebtoken": "^8.5.1",
